--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 SERVER_PROPERTIES=server.properties
-MINECRAFT_SERVER_JAR=minecraft_server.jar
+MINECRAFT_SERVER_JAR=minecraft_server.1.8.9.jar
 
 cd $OPENSHIFT_DATA_DIR
 
